# srtspeak

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  DESIGN.md  LICENSE  README.ja.md  README.md  glossary.json  pyproject.toml  run_doctor.bat  run_gui.bat  run_srtspeak.bat
docs/: SRT_TRANSLATE_DESIGN.md
scripts/: update_i18n.py
src/srtspeak/: __init__.py  __main__.py  cli.py  i18n.py  progress_i18n.py
src/srtspeak/core/: cache.py  cancel.py  ffmpeg_resolve.py  fit.py  ja_yomi.py  languages.py  models.py  pipeline.py  progress.py  report.py  secrets.py  srt_parser.py  srt_translate.py  text_sanitize.py  timeline.py  timeline_new.py  translate_glossary.py  tts_xai.py  util.py  voices.py
src/srtspeak/gui/: __init__.py  app.py
src/srtspeak/locales/: srtspeak.pot
src/srtspeak/locales/en/LC_MESSAGES/: srtspeak.mo  srtspeak.po
src/srtspeak/locales/ja/LC_MESSAGES/: srtspeak.mo  srtspeak.po
tests/: test_cache.py  test_cli_i18n.py  test_cli_translate.py  test_dry_run.py  test_fit.py  test_gui_no_cache.py  test_gui_progress.py  test_i18n.py  test_ja_yomi.py  test_languages.py  test_models.py  test_out_dir.py  test_pipeline_e2e.py  test_progress.py  test_progress_i18n.py  test_secrets.py  test_srt_encoding.py  test_srt_format_roundtrip.py  test_srt_parser.py  test_srt_translate_merge.py  test_text_sanitize.py  test_timeline.py  test_translate_glossary.py  test_tts_xai.py  test_voices.py
