[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srtspeak"
version = "0.1.0"
description = "SRT multilingual TTS with forced cue-window timing (xAI Grok)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Hirofumi Ukawa", email = "hirofumi@ukawa.biz" }]
dependencies = []

[project.optional-dependencies]
ja = ["kanjiconv"]
gui = ["PySide6>=6.6"]
ffmpeg = ["imageio-ffmpeg>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.6", "Babel>=2.14"]

[project.scripts]
srtspeak = "srtspeak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
srtspeak = ["locales/**/*.mo", "locales/**/*.po", "locales/**/*.pot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
