[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srtspeak"
version = "0.1.4"
description = "SRT multilingual TTS with forced cue-window timing (xAI Grok)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Hirofumi Ukawa", email = "hirofumi@ukawa.biz" }]
keywords = ["srt", "tts", "xai", "grok", "ffmpeg", "subtitle"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "PySide6>=6.6",
  "keyring>=25",
]

[project.urls]
Homepage = "https://github.com/awaku7/srtspeak"
Repository = "https://github.com/awaku7/srtspeak"
Issues = "https://github.com/awaku7/srtspeak/issues"

[project.optional-dependencies]
ffmpeg = ["imageio-ffmpeg>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.6", "Babel>=2.14", "keyring>=25"]

[project.scripts]
srtspeak = "srtspeak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
srtspeak = ["locales/**/*.mo", "locales/**/*.po", "locales/**/*.pot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
